feat(slides): first version of slides

--- a/src/slides/intro/_doodle.html
+++ b/src/slides/intro/_doodle.html
@@ -1,5 +1,6 @@
 <section intro>
   <h2>
-    This slide acts like a doodle visually resuming the talk
+    Hello 👋! My name is <mark>A11y</mark>
   </h2>
+  <h3 class="fragment">An <mark>inclusive approach</mark> in <mark>Design</mark> and <mark>Software Development</mark></h3>
 </section>
