--- a/src/slides/outro/_links.html
+++ b/src/slides/outro/_links.html
@@ -22,7 +22,7 @@
   </comparison>
 </section> -->
 
-<section data-transition="convex">
+<!-- <section data-transition="convex">
   <h4>Personal Links</h4>
   <comparison links>
     <figure>
@@ -44,28 +44,47 @@
       </figcaption>
     </figure>
   </comparison>
-</section>
+</section> -->
 
 <section data-transition="convex">
-  <h4>DevDojo Links</h4>
-  <comparison links>
-    <figure>
-      <picture>
-        <source srcset="./assets/qrcodes/dev-dojo.png?as=webp" type="image/webp" />
-        <img src="./assets/qrcodes/dev-dojo.png" alt="devdojo.it" />
-      </picture>
-      <figcaption>
-        <small>devdojo.it</small>
-      </figcaption>
-    </figure>
-    <figure>
-      <picture>
-        <source srcset="./assets/qrcodes/dev-dojo-linkedin.png?as=webp" type="image/webp" />
-        <img src="./assets/qrcodes/dev-dojo-linkedin.png" alt="devdojo @ linkedin" />
-      </picture>
-      <figcaption>
-        <small>LinkedIn</small>
-      </figcaption>
-    </figure>
-  </comparison>
+  <h4>Dev Dojo IT is about to start a workshop</h4>
+  <figure>
+    <picture>
+      <source srcset="./assets/workshop.png?as=webp" type="image/webp" />
+      <img src="./assets/workshop.png" alt="Dev Dojo IT Accessibility Workshop" />
+    </picture>
+  </figure>
+</section>
+<section links data-transition="convex">
+  <figure>
+    <picture>
+      <source srcset="./assets/qrcodes/workshop.png?as=webp" type="image/webp" />
+      <img src="./assets/qrcodes/workshop.png" alt="Dev Dojo IT Accessibility Workshop" />
+    </picture>
+    <figcaption>
+      <small>Accessibility Workshop @ Eventbrite</small>
+    </figcaption>
+  </figure>
+</section>
+<section links data-transition="convex">
+  <figure>
+    <picture>
+      <source srcset="./assets/qrcodes/dev-dojo.png?as=webp" type="image/webp" />
+      <img src="./assets/qrcodes/dev-dojo.png" alt="devdojo.it" />
+    </picture>
+    <figcaption>
+      <small>devdojo.it</small>
+    </figcaption>
+  </figure>
+</section>
+<section links data-transition="convex">
+  <figure>
+    <picture>
+      <source srcset="./assets/qrcodes/dev-dojo-linkedin.png?as=webp" type="image/webp" />
+      <img src="./assets/qrcodes/dev-dojo-linkedin.png" alt="devdojo @ linkedin" />
+    </picture>
+    <figcaption>
+      <small>DevDojoIT @ LinkedIn</small>
+    </figcaption>
+  </figure>
 </section>
