--- a/src/slides/topics/topics.html
+++ b/src/slides/topics/topics.html
@@ -1,3 +1,152 @@
 <section>
-  <!-- Here goes the talk slides -->
+  <section>
+    <h2>What is <mark>A11y</mark>?</h2>
+  </section>
+  <section>
+    <p><mark>Accessibility</mark> (A11y) is not just a <mark>technical requirement</mark>: it's an <mark>ethical commitment</mark> and a <mark>strategic advantage</mark>.</p>
+  </section>
+  <section>
+    <p>It aims to make <mark>digital products</mark> accessible to everyone, regardless of their abilities.</p>
+  </section>
+  <section>
+    <h2>Why "<mark>a11y</mark>"?</h2>
+  </section>
+  <section>
+    <p>
+      A <mark>numeronym</mark> for the word accessibility: <br />
+      "a" + 11 letters + "y"
+    </p>
+  </section>
+  <section>
+    <p>
+      Similar examples: <br />
+      <mark>i18n</mark> (internationalization), <br />
+      <mark>l10n</mark> (localization)
+    </p>
+  </section>
+  <section>
+    <h3 balance><mark>Accessibility</mark> is not an optional feature, <mark>it's a fundamental digital right</mark> for all users.</h3>
+  </section>
+  <section>
+    <h4 balance><mark>~15-20% of the global population</mark> has permanent or temporary disability: 1 person out to 5, <mark>which means 1.64B people</mark></h4>
+  </section>
+  <section>
+    <h4>This involves</h4>
+    <ul>
+      <li class="fragment">Visual impairments</li>
+      <li class="fragment">Motor disabilities</li>
+      <li class="fragment">Hearing loss</li>
+      <li class="fragment">Cognitive limitations</li>
+      <li class="fragment">Temporary or situational limitations</li>
+      <li class="fragment">Environmental access challenges</li>
+    </ul>
+  </section>
+  <section>
+    <h2><mark>Vision</mark> and <mark>Core Goals</mark></h2>
+    <ul>
+      <li class="fragment"><mark>Social Inclusion:</mark> Designing for everyone, without exception.</li>
+      <li class="fragment"><mark>Enhanced UX:</mark> Clear, friendly, intuitive interfaces.</li>
+      <li class="fragment"><mark>Innovation:</mark> Creative solutions to remove digital barriers.</li>
+    </ul>
+  </section>
+  <section>
+    <h2>Legal <mark>Framework</mark></h2>
+    <ul>
+      <li class="fragment">
+        <mark><a href="https://www.w3.org/WAI/standards-guidelines/wcag/" target="_blank">WCAG</a>:</mark> Web Content Accessibility Guidelines
+      </li>
+      <li class="fragment">
+        <mark><a href="https://www.ada.gov/" target="_blank">ADA</a>:</mark> Americans with Disabilities Act
+      </li>
+      <li class="fragment">
+        <mark><a href="https://www.etsi.org/deliver/etsi_en/301500_301599/301549/" target="_blank">EN 301 549</a>:</mark> European accessibility standard
+      </li>
+      <li class="fragment">
+        <mark><a href="https://ec.europa.eu/social/main.jsp?catId=1202" target="_blank">European Accessibility Act</a></mark>
+      </li>
+      <li class="fragment">
+        <mark><a href="https://form.agid.gov.it/view/accessibility/" target="_blank">AGID Declaration of Accessibility</a></mark>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <h2>Beyond <mark>Permanent Disabilities</mark></h2>
+    <p><mark>Accessibility</mark> also supports:</p>
+    <ul>
+      <li class="fragment">Temporary conditions (e.g., broken limb)</li>
+      <li class="fragment">Environmental limitations (e.g., poor lighting)</li>
+      <li class="fragment">Technological barriers (e.g., old devices, slow internet)</li>
+    </ul>
+  </section>
+  <section>
+    <h2><mark>Shared Responsibility</mark></h2>
+    <p>All <mark>stakeholders</mark> contribute to <mark>accessibility</mark>:</p>
+    <ul>
+      <li class="fragment">Designers</li>
+      <li class="fragment">Developers</li>
+      <li class="fragment">Project Managers</li>
+      <li class="fragment">Testers & QA</li>
+      <li class="fragment">C-level Executives</li>
+    </ul>
+  </section>
+  <section>
+    <h2>The <mark>Ethical Imperative</mark></h2>
+    <ul>
+      <li class="fragment"><mark>Digital Equity:</mark> Access to digital resources is a right.</li>
+      <li class="fragment"><mark>Inclusion:</mark> No one left behind.</li>
+      <li class="fragment"><mark>Social Responsibility:</mark> Design that serves society.</li>
+      <li class="fragment"><mark>Better UX:</mark> Everyone benefits.</li>
+      <li class="fragment"><mark>SEO:</mark> Accessibility improves visibility.</li>
+    </ul>
+  </section>
+  <section>
+    <h2>The <mark>Legal Imperative</mark></h2>
+    <p><mark>Non-compliance</mark> leads to:</p>
+    <ul>
+      <li class="fragment">Fines</li>
+      <li class="fragment">Legal action</li>
+      <li class="fragment">Reputation loss</li>
+    </ul>
+    <p class="fragment">
+      EU’s <mark><a href="https://ec.europa.eu/social/main.jsp?catId=1202" target="_blank">EAA</a></mark> promotes anonymous reporting of accessibility violations.
+    </p>
+  </section>
+  <section>
+    <h2>The <mark>Functional Imperative</mark></h2>
+    <p><mark>Accessible design</mark> leads to:</p>
+    <ul>
+      <li class="fragment">Better usability</li>
+      <li class="fragment">Improved performance</li>
+      <li class="fragment">SEO and compatibility gains</li>
+      <li class="fragment">Reduced technical debt</li>
+    </ul>
+  </section>
+  <!-- <section>
+    <h2><mark>Tools & Strategies</mark> for Compliance</h2>
+    <ul>
+      <li class="fragment">Automated audits</li>
+      <li class="fragment">User testing with assistive technologies</li>
+      <li class="fragment">Ongoing team training</li>
+      <li class="fragment">Clear KPIs and reporting</li>
+      <li class="fragment">Dedicated accessibility QA team</li>
+    </ul>
+  </section> -->
+  <section>
+    <h2><mark>Core Principles</mark> of A11y - POUR</h2>
+    <ul>
+      <li class="fragment">✅ <mark>Perceivable</mark>: Content available to all senses</li>
+      <li class="fragment">✅ <mark>Operable</mark>: Interfaces usable without mouse</li>
+      <li class="fragment">✅ <mark>Understandable</mark>: Language and interactions are intuitive</li>
+      <li class="fragment">✅ <mark>Robust</mark>: Works with various technologies</li>
+    </ul>
+  </section>
+  <section>
+    <h4><mark>Accessibility</mark> is not just for the web — it's a <mark>universal design principle</mark>.</h4>
+  </section>
+  <section>
+    <h2>Final <mark>Thoughts</mark></h2>
+  </section>
+  <section>
+    <blockquote>Building accessible UI and UX for digital products means <mark>building for everyone</mark>! Let’s shape an inclusive <mark>digital world</mark>.</blockquote>
+  </section>
 </section>
