--- a/src/slides/intro/intro.html
+++ b/src/slides/intro/intro.html
@@ -1,3 +1,3 @@
 <include src="./slides/intro/_doodle.html"></include>
-<include src="./slides/intro/_pixu.html"></include>
-<include src="./slides/intro/_main-topic.html"></include>
+<!-- <include src="./slides/intro/_pixu.html"></include> -->
+<!-- <include src="./slides/intro/_main-topic.html"></include> -->
